# AeroStream

./: .gitignore  CMakeLists.txt  README.md  run_all.sh  run_all_with_venv.sh
.github/workflows/: cpp-build.yml
include/: ISensor.hpp  MockSensor.hpp  PID.hpp
scripts/: app.py  visualize.py
src/: main.cpp
src/core/: PID.cpp
src/simulation/: MockSensor.cpp
tests/: test_pid.cpp
